@@ -15,7 +15,8 @@
     <junit.platform.version>1.0.3</junit.platform.version>
     <junit.vintage.version>4.12.3</junit.vintage.version>
     <maven.compiler.plugin.version>3.7.0</maven.compiler.plugin.version>
-    <maven.surefire.plugin.version>2.20.1</maven.surefire.plugin.version>
+    <!-- latest version (2.20.1) does not work well with JUnit5 https://issues.apache.org/jira/browse/SUREFIRE-1206 -->
+    <maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
   </properties>
   <dependencies>
     <dependency>
@@ -80,7 +81,16 @@
               <artifactId>junit-platform-surefire-provider</artifactId>
               <version>${junit.platform.version}</version>
             </dependency>
+            <dependency>
+              <groupId>org.junit.jupiter</groupId>
+              <artifactId>junit-jupiter-engine</artifactId>
+              <version>${junit.jupiter.version}</version>
+            </dependency>
           </dependencies>
+          <configuration>
+            <argLine> --add-modules jdk.incubator.httpclient --add-modules java.xml.bind --illegal-access=deny 
+            </argLine>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -92,13 +102,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <dependencies>
-          <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-surefire-provider</artifactId>
-            <version>${junit.platform.version}</version>
-          </dependency>
-        </dependencies>
       </plugin>
     </plugins>
   </build>
